--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -10,6 +10,9 @@
     >
   </div>
 </div>
+<div class="margin-cars">
+  {{ vehicleDetails.CarItineraries.length }} cars found
+</div>
 <div class="items-container">
   <div class="item" *ngFor="let vehicle of vehicleDetails.CarItineraries">
     <div class="px-3 d-flex">
